tests/ui/async-await/return-type-notation/super-method-bound-ambig.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/super-method-bound-ambig.rs:3:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0221]: ambiguous associated function `test` in bounds of `Foo`
  --> $DIR/super-method-bound-ambig.rs:25:12
   |
LL |     async fn test();
   |     ---------------- ambiguous `test` from `for<'a> Super1<'a>`
...
LL |     async fn test();
   |     ---------------- ambiguous `test` from `Super2`
...
LL |     T: Foo<test(): Send>,
   |            ^^^^^^^^^^^^ ambiguous associated function `test`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0221`.
